# SciVis_Server

./: .gitignore  CMakeLists.txt  README  new_gen_spring.py  patchelf.sh  protocol.txt
include/: AnchorHeadsetData.h  ColorMode.h  FluidDataset.h  InternalData.h  InternatData.h  LocationClientSocket.h  LocationServer.h  MetaData.h  SubDatasetHeadsetInformation.h  TFType.h  TrialTabletData.h  VFVBufferValue.h  VFVClientSocket.h  VFVDataInformation.h  VFVServer.h  config.h  visibility.h  writeData.h
scripts/extractCHI20Data/: bootstrap.py  extractCHI20Data.py  tablet.py
scripts/networkTest/: hololens.py
src/: FluidDataset.cpp  InternalData.cpp  LocationClientSocket.cpp  LocationServer.cpp  MetaData.cpp  SubDatasetHeadsetInformation.cpp  VFVClientSocket.cpp  VFVServer.cpp  main.cpp
test/: hololens.py  tablet.py
